Abstracting the CSS a little, to add in a "grid" view.

--- a/window.html
+++ b/window.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
     <link rel="stylesheet" type="text/css" href="/window.css" />
+    <link rel="stylesheet" type="text/css" href="/views/grid.css" />
 </head>
 <body>
     <script src="/lib/Undo.js"></script>
