--- a/background.html
+++ b/background.html
@@ -40,6 +40,7 @@
             "tabs.close.display": "hover",
 
             "windows.middle-close": false,
+            "windows.type": "horizontal",
 
             "counter.enabled": true,
             "counter.type": "total",
@@ -87,6 +88,7 @@
         Object.keys(config).forEach(function (key) {
             if (key in defaults) {
                 if (Options.get(code) || key === code) {
+                    //if (!Options.isDefault(key)) {
                     if (config[key] !== defaults[key]) {
                         _gaq.push(["_trackEvent", "Options", key, config[key] + ""]);
     //                    console.log("tracked -", key, config[key] + "");
@@ -151,7 +153,7 @@
                 switch (Options.get("counter.type")) {
                 case "total":
                     value = counter.get("total-number");
-                    if (value === 0) {
+                    if (!value) { // === 0
                         value = "";
                     }
                     Platform.icon.setBackgroundColor({ color: [0, 0, 0, 255] });
