--- a/window.html
+++ b/window.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
     <link rel="stylesheet" type="text/css" href="/window.css" />
-    <link rel="stylesheet" type="text/css" href="/views/grid.css" />
+    <!--<link rel="stylesheet" type="text/css" href="/views/horizontal.css" />-->
 </head>
 <body>
     <script src="/lib/Undo.js"></script>
