Increasing the padding on the context menu's submenus. Also fixing drag-to-select for input boxes on the options page.

--- a/background.html
+++ b/background.html
@@ -431,6 +431,7 @@
 
         Platform.message.addEventListener("lib.keyboard", function (event) {
             //console.log(event);
+            //showTabOrganizer();
             if (event.type === "keyup") {
                 /*
                 if (keycheck(event, {
