--- a/options.html
+++ b/options.html
@@ -1127,7 +1127,7 @@
                     //container.separator();
                     //container.space({ height: "0.5em" });
 
-                    container.input("dropdown-list", {
+                    /*container.input("dropdown-list", {
                         option: "windows.type",
                         list: [{
                             value: "horizontal",
@@ -1136,7 +1136,7 @@
                             value: "dual-pane",
                             text: "Dual-Pane"
                         }]
-                    });
+                    });*/
                 });
             });
         </script>
