Fixing issue 81 and 107.

--- a/background.html
+++ b/background.html
@@ -44,8 +44,8 @@
 
             "counter.enabled": true,
             "counter.type": "total",
-            "counter.reset.whenlower": true,
-            "counter.reset.number": 5,
+            "counter.reset.whenlower": false,
+            "counter.reset.number": 0,
             "counter.reset.time": false,
             "counter.reset.time.hour": "00",
             "counter.reset.time.minute": "00",
