--- a/options.html
+++ b/options.html
@@ -707,6 +707,12 @@
 
 
 
+                /*container.category("Filters", function (container) {
+
+                });*/
+
+
+
                 container.category("Favorites", function (container) {
                     var favorites = Options.get("tabs.favorites.urls");
                     var array = [];
