--- a/options.html
+++ b/options.html
@@ -707,7 +707,7 @@
 
 
 
-                /*container.category("Filters", function (container) {
+                /*container.category("Macros", function (container) {
 
                 });*/
 
