--- a/options.html
+++ b/options.html
@@ -1524,7 +1524,7 @@
                         }
 
                         function updateKeys() {
-                            var keys = Object.keys(favorites.data);
+                            var keys = favorites.keys();
 
                             if (keys.length) {
                                 placeholder.setAttribute("hidden", "");
