--- a/window.html
+++ b/window.html
@@ -30,5 +30,11 @@
         *-->
     <!--<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
     <script src="/window.js"></script>
+
+    <!--<script>
+/*        chrome.bookmarks.search("google chrome", function (array) {
+            console.log(array.length);
+        });*/
+    </script>-->
 </body>
 </html>
