--- a/window.html
+++ b/window.html
@@ -20,6 +20,8 @@
     <script src="/lib/UI%20Helper.js"></script>
     <!--<script src="/lib/Parser.js"></script>-->
     <script src="/lib/Event%20Helper.js"></script>
+    <script src="/lib/parser.js"></script>
+    <script src="/lib/action.search.js"></script>
     <script src="/lib/Queue.js"></script>
     <script src="/Tab%20Organizer.js"></script>
 
